# pyblish-plugins

./: .docstr.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/readyplayerme/pyblish_plugins/: __about__.py  action_mesh_clearvertexcolors.py  action_mesh_limitboneinfluences.py  action_mesh_normalizeweights.py  action_mesh_selectlooseedges.py  action_mesh_selectloosevertices.py  action_mesh_selectngons.py  action_mesh_selectnonmanifoldvertices.py  action_mesh_selectuvsoutofuvrange.py  action_mesh_selectverticesbyboneinfluence.py  action_mesh_selectverticesinvalidbones.py  action_mesh_selectvertsbynonnormalweights.py  action_mesh_selectvertsoutofuvrange.py  action_mesh_selectzeroareapolygons.py  action_mesh_selectzerolengthedges.py  action_mesh_selectzerouvareapolygons.py  action_object_applytransforms.py  action_object_cleartransforms.py  action_object_setmode.py  action_texture_reload.py  action_texture_setcolorspace.py  collect_collections.py  collect_meshes.py  collect_objects.py  collect_rigs.py  collect_textures.py  collect_totaltriagnlecount.py  extract_fbx.py  extract_glb.py  shared_funcs.py  validate_animations.py  validate_file_path.py  validate_material_backfaceculling.py  validate_material_diffuseparameter.py  validate_material_samplerwrapping.py  validate_material_specularparamter.py  validate_material_usenodes.py  validate_mesh_skinboneinfluences.py  validate_mesh_skinbonename.py  validate_mesh_skinning.py  (+22 more)
src/readyplayerme/pyblish_plugins/configs/: Facewear.json  Full_Body_Outfit.json  Hair.json  Headwear.json  Modular_bottom.json  Modular_footwear.json  Modular_top.json  Outfit.json
